POD/busy1.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busy
  name: busy
spec:
  containers:
  - args:
    - C:/Program Files/Git/usr/bin/sh
    - -c
    - sleep 3600
    image: busybox
    name: busy
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
