POD/deployment-definition.yaml
  apiVersion:  apps/v1
  kind: Deployment
  metadata:
    name: myapp-deployment
    labels:
      app: myapp
      type: front-end
  spec:
    template:
      metadata:
        name: myapp-pod
        labels:
          app: myapp
          type: front-end
      spec:
          containers:
            - name: nginx-container
              image: nginx:1.5-err

    replicas: 4
    selector:
      matchLabels:
        type: front-end
