POD/multi.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: multi
  name: multi
spec:
  containers:
  - image: nginx
    imagePullPolicy: IfNotPresent
    name: multi
    ports:
    - containerPort: 80
    volumeMounts:
      - name: test-vol
        mountPath: "/usr/share/nginx/html"
    resources: {}
  volumes:
    - name: test-vol
      emptyDir: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
