POD/ng.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx3
  name: nginx3
spec:
  containers:
  - image: nginx
    imagePullPolicy: IfNotPresent
    name: nginx3
    resources: {}
  nodeName: docker-desktop
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
