POD/nginxR.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx1
  name: nginx1
spec:
  containers:
  - image: nginx
    name: nginx1
    resources: {}
    readinessProbe:
      httpGet:
       path: /
       port: 80
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
