POD/pod-definition.yml
  apiVersion: v1
  kind: Pod
  metadata:
    name: myapp-pod
    namespace: dev
    labels:
      app: myapp
  spec:
    containers:
      - name: nginx-container
        image: nginx
