POD/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: redis
    spec:
      containers:
      - image: redis:apline
        name: redis
        resources: {}
        volumeMounts:
          - name: data-vol
            mountPath: /var
          - name: cm-vol
            mountPath: /etc
        resources:
          limits:
            cpu: "1"
          requests:
            cpu: 500m    
      volumes:
        - name: cm-vol
          configMap:
            name: cm
        - name: data-vol
          emptyDir: {}        
status: {}
